--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
     <!-- navbar -->
     <div class="nav">
-        <div class="nav_left">
+        <!-- <div class="nav_left">
             <a href="index.html">
-                <img src="n.jpg" alt="Netflix Logo">
+                <img src="netflix logo.jpg" alt="Netflix Logo">
             </a>
         </div>
         <div class="nav_right">
-            <img src="Netflix avatar.jpg" alt="User Avatar">
-        </div>
+            <img src="https://ui-avatars.com/api/?name=User" alt="User Avatar">
+        </div> -->
     </div>
     <!-- banner -->
     
